move/PCI_8164.H

I16 FNTYPE _8164_set_sync_option(I16 AxisNo, I16 sync_stop_on, I16 cstop_output_on, I16 sync_option1, I16 sync_option2);
I16 FNTYPE _8164_mask_axis_stop_int(I16 AxisNo, I16 int_disable);
I16 FNTYPE _8164_set_axis_option(I16 AxisNo, I16 option);
I16 FNTYPE _8164_set_axis_stop_int(I16 AxisNo, I16 axis_stop_int);
I16 FNTYPE _8164_version_info(I16 CardNo, U16 *HardwareInfo, U16 *SoftwareInfo, U16 *DriverInfo);
I16 FNTYPE _8164_version_info_ex(I16 CardNo, U16 *HardwareInfo, I32 *SoftwareInfo, I32 *DriverInfo);
I16 FNTYPE _8164_set_sync_stop_mode(I16 AxisNo, I16 stop_mode);
I16 FNTYPE _8164_mask_output_pulse(I16 AxisNo,I16 Mask);
I16 FNTYPE _8164_set_sync_signal_source(I16 AxisNo, I16 sync_axis);
I16 FNTYPE _8164_set_sync_signal_mode(I16 AxisNo, I16 mode);
I16 FNTYPE _8164_set_auto_rdp(I16 CardNo,I16 on_off);
I16 FNTYPE _8164_start_ta_pickplace(I16 *AxisPair2, F64 *Pos3, F64 *SVel3, F64 *MVel3, F64 *AccT3, F64 *StartPoint2);
I16 FNTYPE _8164_set_rotary_counter(I16 AxisNo, I16 reset_src);
I16 FNTYPE _8164_set_auto_compare2(I16 AxisNo ,I16 SelectSrc);
I16 FNTYPE _8164_set_fifo_data(I16 AxisNo ,I32 Data);
I16 FNTYPE _8164_force_cmp_output(I16 AxisNo);
I16 FNTYPE _8164_dwell_move(I16 AxisNo, F64 miniSecond);
I16 FNTYPE _8164_set_move_para(I16 AxisNo, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec,I16 C_Type,I16 M_Type,F64 SVacc,F64 SVdec);
I16 FNTYPE _8164_fast_tr_move(I16 AxisNo, F64 Dist);
//I16 FNTYPE _8164_tri_tr_move(I32 Dist);
//I16 FNTYPE _8164_tri_get_xz_position(F64 *xpos, F64 *zpos);
//I16 FNTYPE _8164_tri_get_xz_cmd(I32 *xcmd, I32 *zcmd);
I16 FNTYPE _8164_set_erc_off_time(I16 AxisNo, I16 erc_off_time);
I16 FNTYPE _8164_get_latest_speed_setting(I16 AxisNo,F64 *StrVel,F64 *MaxVel);
I16 FNTYPE _8164_get_latest_t_acc_setting(I16 AxisNo,F64 *Tacc,F64 *Tdec);
I16 FNTYPE _8164_get_latest_s_acc_setting(I16 AxisNo,F64 *Tacc,F64 *Tdec);
// PCI-8164IL Only
I16 FNTYPE _8164_il_get_position(I16 AxisNo, F64 *cmp_pos);
I16 FNTYPE _8164_il_set_position(I16 AxisNo, F64 cmp_pos);
I16 FNTYPE _8164_il_set_compare(I16 AxisNo, F64 smaller, F64 bigger);
I16 FNTYPE _8164_il_get_compare(I16 AxisNo, F64 *smaller, F64 *bigger);
I16 FNTYPE _8164_il_set_int(I16 AxisNo, I16 enable);
I16 FNTYPE _8164_il_get_status(I16 CardNo, I16 *comp_sts);
I16 FNTYPE _8164_il_get_int_status(I16 cardNo, I16 *comp_int);
I16 FNTYPE _8164_il_set_counter_mode(I16 AxisNo, I16 mode);
I16 FNTYPE _8164_il_set_interlock(I16 CardNo, I16 control);
I16 FNTYPE _8164_il_set_counter_src(I16 AxisNo, I16 src);
I16 FNTYPE _8164_async_avoid(I16 CardNo, I32 Boundary, I16 cmp_mode, I16 Enable_Mode);
I16 FNTYPE _8164_aa_set_counter_mode(I16 CardNo, I16 axis0_mode, I16 axis1_mode, I16 cnt_src);
I16 FNTYPE _8164_aa_get_boundary(I16 CardNo, F64 *boundary);
I16 FNTYPE _8164_aa_reset_error_value(I16 CardNo, F64 err_value);
I16 FNTYPE _8164_aa_get_error_value(I16 CardNo, F64 *err_value);
I16 FNTYPE _8164_aa_release_sd_latch(I16 CardNo);
I16 FNTYPE _8164_read_register(I16 AxisNo,U16 CmdNo,I32 *RegData);
// Reserved Function
I16 FNTYPE _8164_set_counter1(I16 AxisNo, I32 Pos);
I16 FNTYPE _8164_get_counter1(I16 AxisNo, I32 *Pos);
I16 FNTYPE _8164_set_counter2(I16 AxisNo, I32 Pos);
I16 FNTYPE _8164_get_counter2(I16 AxisNo, I32 *Pos);
I16 FNTYPE _8164_set_counter3(I16 AxisNo, I32 Pos);
I16 FNTYPE _8164_get_counter3(I16 AxisNo, I32 *Pos);
I16 FNTYPE _8164_set_counter4(I16 AxisNo, I32 Pos);
I16 FNTYPE _8164_get_counter4(I16 AxisNo, I32 *Pos);
I16 FNTYPE _8164_get_inter_status(I16 AxisNo, U32 *inter_sts);
I16 FNTYPE _8164_get_env(I16 AxisNo, I16 env_no, U32 *env_value_h, U32 *env_value_s );
I16 FNTYPE _8164_get_rmd(I16 AxisNo, U32 *rmd_value_h, U32 *rmd_value_s );
I16 FNTYPE _8164_get_sts(I16 AxisNo, U32 *sts);
I16 FNTYPE _8164_cpld_write(I16 CardNo, U16 Offset, U16 Data);
U16 FNTYPE _8164_cpld_read(I16 CardNo, U16 Offset);
I16 FNTYPE _8164_software_reset(I16 cardNo);
I16 FNTYPE _8164_preset_cmp_v_change(I16 AxisNo, F64 FromSpeed, F64 ToSpeed, F64 Time, F64 RampDist);
I16 FNTYPE _8164_set_compare_mode(I16 AxisNo, I16 CompNo, I16 CmpSrc, I16 CmpMethod, I16 CmpAction);
I16 FNTYPE _8164_set_compare_data(I16 AxisNo, I16 CompNo, F64 Pos);
I16 FNTYPE _8164_get_sync_latch_data(I16 CardNo, I16 EnableBit, F64 *LatchPos);
I16 FNTYPE _8164_get_rest_arc_command(I16 AxisNo, I32 *rest_command);
I16 FNTYPE _8164_get_slow_down_point(I16 AxisNo, I32 *SDP);
I16 FNTYPE _8164_application_option(I16 OptionCode);