move/PCI_8164.cs


    [DllImport("8164.dll")]public static extern Int16 _8164_set_sync_option(System.Int16 AxisNo, System.Int16 sync_stop_on,System.Int16 cstop_output_on, System.Int16 sync_option1, System.Int16 sync_option2);
    [DllImport("8164.dll")]public static extern Int16 _8164_mask_axis_stop_int(System.Int16 AxisNo, System.Int16 int_disable);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_axis_option(System.Int16 AxisNo, System.Int16 option);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_axis_stop_int(System.Int16 AxisNo, System.Int16 axis_stop_int);
    [DllImport("8164.dll")]public static extern Int16 _8164_version_info(System.Int16 CardNo, ref System.UInt16 HardwareInfo, ref System.UInt16 SoftwareInfo, ref System.UInt16 DriverInfo);
    [DllImport("8164.dll")]public static extern Int16 _8164_version_info_ex(System.Int16 CardNo, ref System.UInt16 HardwareInfo, ref System.UInt16 SoftwareInfo, ref System.UInt16 DriverInfo);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_sync_stop_mode(System.Int16 AxisNo, System.Int16 stop_mode);
    [DllImport("8164.dll")]public static extern Int16 _8164_mask_output_pulse(System.Int16 AxisNo, System.Int16 Mask);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_sync_signal_source(System.Int16 AxisNo, System.Int16 sync_axis);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_sync_signal_mode(System.Int16 AxisNo, System.Int16 mode);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_auto_rdp(System.Int16 AxisNo, System.Int16 on_off);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_ta_pickplace(ref System.Int16 AxisPair2, ref System.Double Pos3, ref System.Double SVel3, ref System.Double MVel3, ref System.Double AccT3, ref System.Double StartPoint2);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_rotary_counter(System.Int16 AxisNo, System.Int16 reset_src);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_auto_compare2(System.Int16 AxisNo, System.Int16 SelectSrc);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_fifo_data(System.Int16 AxisNo, System.Int32 Data);
    [DllImport("8164.dll")]public static extern Int16 _8164_force_cmp_output(System.Int16 AxisNo);
    [DllImport("8164.dll")]public static extern Int16 _8164_dwell_move(System.Int16 AxisNo, System.Double miniSecond);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_move_para(System.Int16 AxisNo, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, System.Int16 C_Type, System.Int16 M_Type, System.Double SVacc, System.Double SVdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_fast_tr_move(System.Int16 AxisNo, System.Double Dist);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_erc_off_time(System.Int16 AxisNo, System.Int16 erc_off_time);
    [DllImport("8164.dll")]public static extern Int16 _8164_get_latest_speed_setting(System.Int16 AxisNo, ref System.Double StrVel, ref System.Double MaxVel);
    [DllImport("8164.dll")]public static extern Int16 _8164_get_latest_t_acc_setting(System.Int16 AxisNo, ref System.Double Tacc, ref System.Double Tdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_get_latest_s_acc_setting(System.Int16 AxisNo, ref System.Double Tacc, ref System.Double Tdec);

    // PCI-8164IL Only
   [DllImport("8164.dll")]public static extern Int16 _8164_il_get_position(System.Int16 AxisNo, ref System.Double cmp_pos);
   [DllImport("8164.dll")]public static extern Int16 _8164_il_set_position(System.Int16 AxisNo, System.Double cmp_pos);
   [DllImport("8164.dll")]public static extern Int16 _8164_il_set_compare(System.Int16 AxisNo, System.Double smaller, System.Double bigger);
   [DllImport("8164.dll")]public static extern Int16 _8164_il_get_compare(System.Int16 AxisNo, ref System.Double smaller, ref System.Double bigger);
   [DllImport("8164.dll")]public static extern Int16 _8164_il_set_int(System.Int16 AxisNo, System.Int16 enable);
   [DllImport("8164.dll")]public static extern Int16 _8164_il_get_status(System.Int16 CardNo, ref System.Int16 comp_sts);
   [DllImport("8164.dll")]public static extern Int16 _8164_il_get_int_status(System.Int16 CardNo, ref System.Int16 comp_int);
   [DllImport("8164.dll")]public static extern Int16 _8164_il_set_counter_mode(System.Int16 AxisNo, System.Int16 mode);
   [DllImport("8164.dll")]public static extern Int16 _8164_il_set_interlock(System.Int16 CardNo, System.Int16 control);
   [DllImport("8164.dll")]public static extern Int16 _8164_il_set_counter_src(System.Int16 AxisNo, System.Int16 src);
   [DllImport("8164.dll")]public static extern Int16 _8164_async_avoid(System.Int16 CardNo, System.Int32 Boundary, System.Int16 cmp_mode, System.Int16 Enable_Mode);
   [DllImport("8164.dll")]public static extern Int16 _8164_aa_set_counter_mode(System.Int16 CardNo, System.Int16 axis0_mode, System.Int16 axis1_mode, System.Int16 cnt_src);
   [DllImport("8164.dll")]public static extern Int16 _8164_aa_get_boundary(System.Int16 CardNo, ref System.Double boundary);
   [DllImport("8164.dll")]public static extern Int16 _8164_aa_reset_error_value(System.Int16 CardNo, System.Double err_value);
   [DllImport("8164.dll")]public static extern Int16 _8164_aa_get_error_value(System.Int16 CardNo, ref System.Double err_value);
   [DllImport("8164.dll")]public static extern Int16 _8164_aa_release_sd_latch(System.Int16 CardNo);
   [DllImport("8164.dll")]public static extern Int16 _8164_read_register(System.Int16 AxisNo, System.UInt16 CmdNo, ref System.Int32 RegData);
        

    // Reserved Function
   [DllImport("8164.dll")]public static extern Int16 _8164_set_counter1(System.Int16 AxisNo, System.Int32 Pos);
   [DllImport("8164.dll")]public static extern Int16 _8164_get_counter1(System.Int16 AxisNo, ref System.Int32 Pos);
   [DllImport("8164.dll")]public static extern Int16 _8164_set_counter2(System.Int16 AxisNo, System.Int32 Pos);
   [DllImport("8164.dll")]public static extern Int16 _8164_get_counter2(System.Int16 AxisNo, ref System.Int32 Pos);
   [DllImport("8164.dll")]public static extern Int16 _8164_set_counter3(System.Int16 AxisNo, System.Int32 Pos);
   [DllImport("8164.dll")]public static extern Int16 _8164_get_counter3(System.Int16 AxisNo, ref System.Int32 Pos);
   [DllImport("8164.dll")]public static extern Int16 _8164_set_counter4(System.Int16 AxisNo, System.Int32 Pos);
   [DllImport("8164.dll")]public static extern Int16 _8164_get_counter4(System.Int16 AxisNo, ref System.Int32 Pos);
   
   [DllImport("8164.dll")]public static extern Int16 _8164_get_inter_status(System.Int16 AxisNo, ref System.UInt32 inter_sts);
   [DllImport("8164.dll")]public static extern Int16 _8164_get_env(System.Int16 AxisNo, System.Int16 env_no, ref System.UInt32 env_value_h, ref System.UInt32 env_value_s);
   [DllImport("8164.dll")]public static extern Int16 _8164_get_rmd(System.Int16 AxisNo, ref System.UInt32 rmd_value_h, ref System.UInt32 rmd_value_s);
   [DllImport("8164.dll")]public static extern Int16 _8164_get_sts(System.Int16 AxisNo, ref System.UInt32 sts);
   [DllImport("8164.dll")]public static extern Int16 _8164_cpld_write(System.Int16 CardNo, System.UInt16 Offset, System.UInt16 Data);
   [DllImport("8164.dll")]public static extern Int16 _8164_cpld_read(System.Int16 CardNo, System.UInt16 Offset);
   [DllImport("8164.dll")]public static extern Int16 _8164_software_reset(System.Int16 CardNo);
   [DllImport("8164.dll")]public static extern Int16 _8164_preset_cmp_v_change(System.Int16 AxisNo, System.Double FromSpeed, System.Double ToSpeed, System.Double Time, System.Double RampDist);
   [DllImport("8164.dll")]public static extern Int16 _8164_set_compare_mode(System.Int16 AxisNo, System.Int16 CompNo, System.Int16 CmpSrc, System.Int16 CmpMethod, System.Int16 CmpAction);
   [DllImport("8164.dll")]public static extern Int16 _8164_set_compare_data(System.Int16 AxisNo, System.Int16 CompNo, System.Double Pos);
   [DllImport("8164.dll")]public static extern Int16 _8164_get_sync_latch_data(System.Int16 CardNo, System.Int16 EnableBit, ref System.Double LatchPos);
   [DllImport("8164.dll")]public static extern Int16 _8164_get_rest_arc_command(System.Int16 AxisNo, ref System.Int32 rest_command);
   [DllImport("8164.dll")]public static extern Int16 _8164_get_slow_down_point(System.Int16 AxisNo, ref System.Int32 SDP);
   [DllImport("8164.dll")]public static extern Int16 _8164_application_option(System.Int16 OptionCode);
   
	}
	
	
	
	
	
}


